# arkestrator

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LESSONS.md  NEXT_SESSION.md  PROJECT_PLAN.md  README.md  TRAINING_SKILLS_ALIGNMENT_PROMPT.md  docker-compose.yml  gpg-key.asc  index.html  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmp-job.json  tsconfig.json
.claude/plans/: dapper-zooming-breeze.md  dynamic-tinkering-thimble.md  effervescent-cuddling-papert.md  (+4 more)
.github/: FUNDING.yml
admin/: MODULE.md  index.html  package.json  tsconfig.json  vite.config.ts
client/: MODULE.md  index.html  package.json  tsconfig.json  vite.config.ts
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: bridges.rs  comfyui.rs  lib.rs
docker/: pnpm-workspace-install.sh
docs/: INDEX.md  architecture.md  bridge-development.md  configuration.md  contributing.md  coordinator.md  deployment-vps-caddy.md  how-it-works.md  installation.md  local-models.md  mcp-integration.md  multi-machine.md  quickstart.md  release-beta-checklist.md  skills.md  troubleshooting.md  usage-bridges.md  usage-client.md  usage-server.md
install/: PKGBUILD  arkestrator.repo
scripts/: build-admin.mjs  build-all.mjs  bump-version.mjs  check-destructive-fixtures.mjs  check-local-scanner.mjs  install-unity-bridge.ps1  marketplace-contract-test.mjs
server/: .arkestrator-prompt.md  MODULE.md  package.json  tsconfig.json
(+535 files in other folders)
