[package]
name = "app"
version = "0.1.85"
description = "AI agent orchestration for creative tools"
authors = ["Tim van Helsdingen"]
license = "MIT"
repository = "https://github.com/timvanhelsdingen/arkestrator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
sysinfo = "0.37"
gethostname = "1.0"
uuid = { version = "1.18", features = ["v4"] }
url = "2.5"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
zip = "2"
tauri-plugin-dialog = "2"
glob = "0.3"
base64 = "0.22"
